Changelog
=========


Version 0.8 (in development)
----------------------------

Drop Python 2 support.

Drop Python 3.5 support and tag Python 3.9 support.


Version 0.7.16
--------------

Tag Python 3.8 support.


Version 0.7.15
--------------

Drop Python 3.4 support.


Version 0.7.14
--------------

Tag Python 3.7 support, add simple tox config.


Version 0.7.13
--------------

Use compatible release version specifiers (bump optional ``graphviz`` to ~=0.7).


Version 0.7.12
--------------

Drop Python 3.3 support.

Include LICENSE.txt file in wheel.


Version 0.7.11
--------------

Port tests from nose/unittest to pytest, add Travis CI and coveralls.

Update meta data, tag Python 3.6 support.


Version 0.7.10
--------------

Use private ``_int`` attribute for internal unboxing purposes. 

Relax ``bitsets`` and ``graphivz`` dependencies to < 1.0.

Improved documentation.


Version 0.7.9
-------------

Raise an error if ``bitset`` members have duplicates.

Extended and improved documentation, added Sphinx-based API reference.

Improved unittests.


Version 0.7.8
-------------

Added ``integers.n()`` and ``integers.rank()``.

Make ``.iter_set()`` available on series as ``.index_sets()`` method.


Version 0.7.7
-------------

Made ``.indexes()`` available on bitsets as ``.iter_set()`` method.

Added ``transform`` module providing additional integer (un)packing tools.


Version 0.7.6
-------------

Added optional ``as_set`` parameter to ``.members()`` method returning a ``frozenset``.


Version 0.7.5
-------------

Added optional boolean value argument to ``.count()`` method.

Added ``integers.bit_mask()``.


Version 0.7.4
-------------

Support domains of just one element (minimum was two).


Version 0.7.3
-------------

Added ``integers.compress()``.

Added ``.copy()`` method (improve ``set`` compatibility).


Version 0.7.2
-------------

Support custom label function in visualization.


Version 0.7.1
-------------
